formatting, adding rebuilt trees as a measurable option